# bbdock

./: AUTHORS  COPYING  ChangeLog  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac
src/: Dock.cc  Dock.hh  Icon.cc  Icon.hh  Makefile  Makefile.am  Makefile.in  Render.cc  Render.hh  Slot.cc  Slot.hh  WindowManager.cc  WindowManager.hh  main.cc
